<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 ParanoidAndroid Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">ParanoidAndroid Backup</string>
    <string name="backup_and_restore">Backup and restore</string>
    <string name="backup_pad">Backup preferences</string>
    <string name="backup_pad_summary">Backup pad.prop file to SD</string>
    <string name="restore_pad">Restore preferences</string>
    <string name="restore_pad_summary">Restore pad.prop from SD</string>
    <string name="remove_pad">Delete backup</string>
    <string name="remove_pad_summary">Current backups:</string>
    <string name="backup_sucess">Sucessfully backed up pad.prop to %s!</string>
    <string name="no_backups">No backups found!</string>
    <string name="restore_dialog">Restore backup</string>
    <string name="restore_sucess">Sucessfully restored pad.prop!</string>
    <string name="remove_dialog">Delete backup</string>
    <string name="remove_sucess">Sucessfully deleted %s!</string>
    <string name="hdpi_display">HDPI display</string>
    <string name="xhdpi_display">XHDPI display</string>
    <string name="rom_not_supported">This ROM is not supported by ParanoidBackup</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_all">Delete all</string>
    <string name="about">About</string>
    <string name="about_summary">Copyright (c) 2012 - ParanoidAndroid Project. Token icons by ~brsev @ deviantart</string>
    <string name="reboot_warning">Would you like to reboot to apply these changes?</string>
</resources>
