<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 ParanoidAndroid Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
   
         <Preference
            android:key="backup_pad"
            android:icon="@drawable/ic_backup"
            android:title="@string/backup_pad"
            android:summary="@string/backup_pad_summary" />
            
         <Preference
            android:key="restore_pad"
            android:icon="@drawable/ic_restore"
            android:title="@string/restore_pad"
            android:summary="@string/restore_pad_summary" />
            
         <!-- Preference
            android:key="install_pad"
            android:icon="@drawable/ic_install"
            android:title="@string/install_pad"
            android:summary="@string/install_pad_summary" / -->
            
         <Preference
            android:key="remove_pad"
            android:icon="@drawable/ic_remove"
            android:title="@string/remove_pad"
            android:summary="@string/remove_pad_summary" />
            
         <Preference
            android:icon="@drawable/ic_about"
            android:title="@string/about"
            android:summary="@string/about_summary" />
    
</PreferenceScreen>

